<resources>
    <string name="app_name">KingsOfKode</string>
    <string name="start">Start</string>
    <string name="textview">TextView</string>
    <string name="selected_character">Selected Character</string>
    <string name="die_1">die #1</string>
    <string name="roll_button_roll">ROLL</string>
    <string name="roll_button_re_roll">RE ROLL</string>
    <string name="roll_button_next">NEXT TURN</string>
    <string name="roll_button_submit">SUBMIT</string>
    <string name="die_2">die #2</string>
    <string name="die_3">die #3</string>
    <string name="die_4">die #4</string>
    <string name="die_5">die #5</string>
    <string name="die_6">die #6</string>
    <string name="static_matrix">static_matrix</string>
    <string name="character_two">character_two</string>
    <string name="character_portrait">character_portrait</string>
    <string name="center_character_portrait">center_character_portrait</string>
    <string name="popularity_image">popularity_image</string>
    <string name="_7">7</string>
    <string name="_10">10</string>
    <string name="_8">8</string>
    <string name="research_image">research_image</string>
    <string name="breaking_change_image">breaking_change_image</string>
    <string name="fake_card">fake_card</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="gameState">gameState</string>
    <string name="back">Back</string>
    <string name="purchase">Purchase</string>
    <string name="start_button_text">START</string>
    <string name="help_button_text">\?</string>
    <string name="help_text">KING OF KODE HELP \n\n This game is played against 3 AI enemies, and the goal is to win either by killing all of them, or by gaining 20 points. \n This is done by rolling 6 dice every turn. These dice are tap-able, which allows you to select some to re-throw up to two times per turn. \n Once you have thrown (and re-thrown) your dice, the enemies do the same. \n There are 6 die faces. 3 that let you score points, one that lets you attack enemies, one that heals you (when you are not the Kode King) and one that gives you research points to unlock power cards with. \n\n Every other rule can be gleaned from the official King of Tokyo manual <a href="https://www.iello.com/sites/default/files/2016-10/KingOfTokyo_2016_EN_Rules.pdf">here</a>.</string>
    <string name="scoreboard_top_player_image">First Player image</string>
    <string name="scoreboard_second_player_image">Second player image</string>
    <string name="scoreboard_third_player_image">Third player image</string>
    <string name="scoreboard_fourth_player_image">Fourth player image</string>
    <string name="card_in_hand">card in hand</string>
    <string name="selected_character_image">Selected character image</string>
</resources>