<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/character_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            tools:srcCompat="@drawable/rust" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/popularity_image"
                android:layout_width="3dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_weight="0.5"
                android:contentDescription="@string/popularity_image"
                app:srcCompat="@drawable/popularity" />

            <TextView
                android:id="@+id/popularity_points"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/_7"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/research_image"
                android:layout_width="3dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:contentDescription="@string/research_image"
                app:srcCompat="@drawable/lightbulb" />

            <TextView
                android:id="@+id/research_points"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/_10"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/breaking_change_image"
                android:layout_width="3dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:contentDescription="@string/breaking_change_image"
                app:srcCompat="@drawable/life" />

            <TextView
                android:id="@+id/breaking_change_points"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.8"
                android:gravity="center_vertical"
                android:text="@string/_8"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBack"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/back"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            app:backgroundTint="@android:color/transparent"
            app:cornerRadius="8dp"
            app:rippleColor="@color/colorPrimary"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="1dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>